# cobot_servo

./: LICENSE  README.md
.devcontainer/: Dockerfile
img/: README.md
scripts/: 01_run_me_first.sh  README.md  a_setup_new_user.sh  b_setup_packages.sh  docker_configuration.sh
src/dual_cobot_model/: CMakeLists.txt  README.md  package.xml
src/dual_cobot_model/meshes/collision/: finger01_collision.stl  finger02_collision.stl  segment01_collision.stl  segment02_collision.stl  segment03_collision.stl  segment04_collision.stl  segment05_collision.stl  segment06_collision.stl  segment07_collision.stl  vacuum_collision.stl
src/dual_cobot_model/meshes/visual/: finger01_visual.stl  finger02_visual.stl  segment02_visual.stl  segment03_visual.stl  segment04_visual.stl  segment05_visual.stl  segment06_visual.stl  segment07_visual.stl  segment_01_logo.dae  vacuum_visual.stl
src/dual_cobot_model/urdf/: robot_arm_macro.xacro  robot_model.urdf.xacro  robot_ros2_controls_macro.xacro
src/dual_cobot_moveit_config/: CMakeLists.txt  package.xml
src/dual_cobot_moveit_config/config/: dual_cobot_model.srdf  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  moveit_cpp.yaml  moveit_servo_left.yaml  moveit_servo_right.yaml  ompl_planning.yaml  pilz_cartesian_limits.yaml  ros2_controllers.yaml
src/py_utils/: package.xml  setup.cfg  setup.py
src/py_utils/py_utils/: controller_types.py  filter_utils.py  launch_utils.py  planner_utils.py  plot_utils.py
src/teleoperation/: package.xml  setup.cfg  setup.py
src/teleoperation/launch/: servo_control.launch.py
src/teleoperation/rviz/: teleop.rviz
src/teleoperation/teleoperation/: hand_control.py  hand_tracker.py  robot.py  servo_controller_node.py
